--- a/web/index.html
+++ b/web/index.html
@@ -40,21 +40,9 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-app.js"></script> -->
   <script>
-import { initializeApp } from "firebase/app";
 
-// Your web app's Firebase configuration
-const firebaseConfig = {
-  apiKey: "AIzaSyAIbuor7fF6rYL5AtR6cDlp5q0aOzeZIzA",
-  authDomain: "amovie-a161c.firebaseapp.com",
-  projectId: "amovie-a161c",
-  storageBucket: "amovie-a161c.appspot.com",
-  messagingSenderId: "544854759441",
-  appId: "1:544854759441:web:26201064f76dba6dce39b0"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
@@ -67,6 +55,27 @@ const app = initializeApp(firebaseConfig);
         return appRunner.runApp();
       });
     });
+
+    // Import the functions you need from the SDKs you need
+    // import { initializeApp } from "firebase/app";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyAIbuor7fF6rYL5AtR6cDlp5q0aOzeZIzA",
+      authDomain: "amovie-a161c.firebaseapp.com",
+      projectId: "amovie-a161c",
+      storageBucket: "amovie-a161c.appspot.com",
+      messagingSenderId: "544854759441",
+      appId: "1:544854759441:web:26201064f76dba6dce39b0"
+    };
+
+    
+
   </script>
+  <script src="main.dart.js" type="application/javascript"></script>
+
 </body>
+
 </html>
